# llama.cpp-flash-expert

ggml/include/: ggml-backend.h  ggml-metal.h
ggml/src/: ggml-backend.cpp
ggml/src/ggml-metal/: ggml-metal-context.h  ggml-metal-context.m  ggml-metal-device.m  ggml-metal.cpp
include/: llama.h
src/: CMakeLists.txt  llama-context.cpp  llama-flash-expert-metal.h  llama-flash-expert-metal.metal  llama-flash-expert-metal.mm  llama-flash-expert.cpp  llama-flash-expert.h  llama-flash-forward.cpp  llama-flash-forward.h  llama-graph.cpp  llama-model-loader.cpp  llama-remote-expert-client.cpp  llama-remote-expert-client.h  llama-remote-expert.cpp  llama-remote-expert.h
tools/expert-worker/: CMakeLists.txt  expert-worker.cpp
tools/server/: server.cpp
